進捗のグラフを、単語単位ではなく文字単位の割合で表示するように変更

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-git.css" type="text/css" media="screen">
     <script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
     <script type="text/javascript" src="../public/javascripts/Word.js"></script>
+    <script type="text/javascript" src="../public/javascripts/questionManager.js"></script>
     <script type="text/javascript" src="modelTest.js"></script>
+    <script type="text/javascript" src="questionManagerTests.js"></script>
 </head>
 <body>
     <h1 id="qunit-header">QUnit Test Suite</h1>
